fix contacts footer on mobile

--- a/src/Components/Footer/DarkFooter/DarkFooter.css
+++ b/src/Components/Footer/DarkFooter/DarkFooter.css
@@ -47,10 +47,13 @@
 
 @media screen and (max-width: 960px) {
     .dark-footer-wrapper {
-        gap: 3rem;
         height: auto;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    .contacts-list { 
+        margin: 1rem 0 3rem 0;
     }
 }
